--- a/Typing Tution.Html
+++ b/Typing Tution.Html
@@ -33,6 +33,7 @@
           <!-- <p class="time-container">Time left: <span id="time">10s</span></p> -->
     
           <!-- <p class="score-container">Score: <span id="score">0</span></p> -->
+          <p>Testing your typing speed</p>
       </div>
     </div>
     <div class="end-game-container-wrapper">
